--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "Marcos Gómez (margobra8)",
+  "license": "MIT",
+  "repository": {
+    "https://github.com/margobra8/crokis"
+  },
+  "dependencies" : {
+      "express": "4.x",
+      "socket.io": "*"
+   }
 }
